objects/Purchase_Price__c/Purchase_Price__c.object-meta.xml
<CustomObject>
    <label>Product Catalog</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>