objects/Purchase_Price__c/fields/Default_Direct_G_L_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Direct_G_L_Account__c</fullName>
    <label>Default Direct G/L Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Direct_Accouts__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GLAccount</valueSetName>
    </valueSet>
</CustomField>