objects/Purchase_Price__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource__c.Category__c</field>
            <operation>equals</operation>
            <value>Materials</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Purchase Prices</relationshipLabel>
    <relationshipName>Purchase_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>