objects/Purchase_Price__c/fields/Name_Char_Count__c.field-meta.xml
<CustomField>
    <fullName>Name_Char_Count__c</fullName>
    <formula>LEN(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Char Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>