objects/Purchase_Price__c/fields/NAV_Item_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Item_No__c</fullName>
    <externalId>true</externalId>
    <label>NAV Item No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>