objects/Purchase_Price__c/fields/Show_Direct_Accouts__c.field-meta.xml
<CustomField>
    <fullName>Show_Direct_Accouts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Direct Accouts</label>
    <type>Checkbox</type>
</CustomField>