objects/Purchase_Price__c/fields/Show_Indirect_Account__c.field-meta.xml
<CustomField>
    <fullName>Show_Indirect_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Indirect Account</label>
    <type>Checkbox</type>
</CustomField>