objects/Purchase_Price__c/fields/Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Date__c</fullName>
    <label>Starting Date</label>
    <type>Date</type>
</CustomField>