objects/Purchase_Price__c/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <label>Tax Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxGroup</valueSetName>
    </valueSet>
</CustomField>