objects/Purchase_Price__c/fields/Unit_Cost_Per__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Per__c</fullName>
    <label>Unit Cost Per</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>