objects/Purchase_Price__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Purchase Prices</relationshipLabel>
    <relationshipName>Purchase_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>