objects/Purchase_Price__c/fields/Vendor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SKU__c</fullName>
    <label>Vendor SKU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>