objects/Purchase_Price__c/listViews/A_M_Industrial.listView-meta.xml
<ListView>
    <fullName>A_M_Industrial</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>A &amp; M INDUSTRIAL SUPPLY INC (Vendor)</value>
    </filters>
    <label>A &amp; M Industrial</label>
</ListView>