objects/Purchase_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_SKU__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Account__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <columns>NAV_Item_No__c</columns>
    <columns>Name_Char_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>powerpak</value>
    </filters>
    <label>All</label>
</ListView>