objects/Purchase_Price__c/listViews/Aramsco.listView-meta.xml
<ListView>
    <fullName>Aramsco</fullName>
    <columns>Vendor_SKU__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAV_Item_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Aramsco (Vendor)</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval,Approved</value>
    </filters>
    <label>Aramsco</label>
</ListView>