objects/Purchase_Price__c/listViews/CDW.listView-meta.xml
<ListView>
    <fullName>CDW</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>cdw</value>
    </filters>
    <label>CDW</label>
</ListView>