objects/Purchase_Price__c/listViews/Champion_Plastics.listView-meta.xml
<ListView>
    <fullName>Champion_Plastics</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Vendor_SKU__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Diesel Direct</value>
    </filters>
    <label>Champion Plastics</label>
</ListView>