objects/Purchase_Price__c/listViews/CHAMPION_PLASTICS_INC_Vendor.listView-meta.xml
<ListView>
    <fullName>CHAMPION_PLASTICS_INC_Vendor</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Vendor_SKU__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>CHAMPION PLASTICS INC (Vendor)</value>
    </filters>
    <label>CHAMPION PLASTICS INC</label>
</ListView>