objects/Purchase_Price__c/listViews/Chemtex.listView-meta.xml
<ListView>
    <fullName>Chemtex</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Chemtex</value>
    </filters>
    <label>Chemtex</label>
</ListView>