objects/Purchase_Price__c/listViews/Cintas_Fire_Safety_Vendor.listView-meta.xml
<ListView>
    <fullName>Cintas_Fire_Safety_Vendor</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Cintas Fire &amp; Safety (Vendor)</value>
    </filters>
    <label>Cintas Fire &amp; Safety (Vendor)</label>
</ListView>