objects/Purchase_Price__c/listViews/Cintas_Uniforms_Supplies_Vendor.listView-meta.xml
<ListView>
    <fullName>Cintas_Uniforms_Supplies_Vendor</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Cintas Uniforms &amp; Supplies (Vendor)</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
    </filters>
    <label>Cintas Uniforms &amp; Supplies (Vendor)</label>
</ListView>