objects/Purchase_Price__c/listViews/COMMERCIAL_BUS_FORMS_INC_Vendor.listView-meta.xml
<ListView>
    <fullName>COMMERCIAL_BUS_FORMS_INC_Vendor</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>COMMERCIAL BUS FORMS INC (Vendor)</value>
    </filters>
    <label>COMMERCIAL BUS FORMS INC (Vendor)</label>
</ListView>