objects/Purchase_Price__c/listViews/DIESEL_DIRECT_MID_ATLANTIC_Vendor.listView-meta.xml
<ListView>
    <fullName>DIESEL_DIRECT_MID_ATLANTIC_Vendor</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Default_Direct_G_L_Account__c</columns>
    <columns>Default_Indirect_G_L_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>DIESEL DIRECT MID ATLANTIC (Vendor)</value>
    </filters>
    <label>DIESEL DIRECT MID ATLANTIC (Vendor)</label>
</ListView>