objects/Purchase_Price__c/listViews/M_M_Industries.listView-meta.xml
<ListView>
    <fullName>M_M_Industries</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Item__c</columns>
    <columns>Vendor_Description__c</columns>
    <columns>Show_Direct_Accouts__c</columns>
    <columns>Show_Indirect_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>M&amp;M INDUSTRIES INC. (Vendor)</value>
    </filters>
    <label>M&amp;M Industries</label>
</ListView>